# swb2_parameters

./: README.md  pyproject.toml
data/: Irrigation_lookup__CDL__CentralSands.txt  Irrigation_lookup__CDL__Illinois_river_basin.txt  Irrigation_lookup__CDL__Michigan_lower_peninsula.txt  Irrigation_lookup__CDL__Mississippi.txt  Landuse_lookup__CDL__Central_Sands.txt  Landuse_lookup__CDL__Illinois_River_Basin.txt  Landuse_lookup__CDL__Michigan_lower_peninsula.txt  Landuse_lookup__CDL__Mississippi.txt  Landuse_lookup__NLCD__NAWQA_Glacial_Aquifers.txt
design/: NOTES.md  PEST_EXPORT_DESIGN.md  PROGRESS_2026-06-16.md  README.md  REFERENCES.md  bootstrap_prompt.txt
example/: cdl_nlcd_crosswalk.tsv  irr_params_long_all_cdl.tsv  irr_params_long_group_smgrain.tsv  long-table-medium-example.tsv  lu_params_long_all_cdl.tsv  lu_params_long_group_smgrain.tsv  lu_params_long_no_max_net_infil_all_cdl.tsv  max_net_infiltration.tsv  mn__irr_lookup_table.tsv  mn_irr_long_form.tsv  output_table_selections.toml  output_table_selections__lu_only.toml  params_long.tsv  params_long.txt  rew_and_tew.tsv  swb2_parameters.toml  test.tsv  test_output_groups.tsv  test_output_groups_max_net_infil.tsv
old_stuff/: bib_to_csv.py  groups.tsv  mn__lu_lookup_table.tsv  mylibrary.csv  test_output_groups_lu_all.tsv  test_output_groups_max_net_infil.tsv
scripts/: generate_crosswalk.py
src/swb2_parameters/: __init__.py  build.py  build_wide.py  (+8 more)
tests/: test_pipeline.py  test_singleton_fixed_bypass.py
v2/: pyproject.toml
v2/src/swb2_parameters/: __init__.py  cli.py  core.py
v2/tests/: test_core.py
(+4 files in other folders)
